ndb - bug#29364 - "SQL queries hang while data node in start phase 5"   In TC init node status for already started nodes during node restart   (not present in 5.1)